// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute BNBx endpoint should return success 1`] = `
{
  "data": {
    "result": 28917028197,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 28917028197,
  "statusCode": 200,
}
`;

exports[`execute MaticX endpoint should return success 1`] = `
{
  "data": {
    "result": 47732197,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 47732197,
  "statusCode": 200,
}
`;

exports[`execute sFTMx endpoint should return success 1`] = `
{
  "data": {
    "result": 26263763,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 26263763,
  "statusCode": 200,
}
`;
